fixed display width overflow issue

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 #display {
-    width: 93%;
+    width: 95%;
     background-color: hsl(0, 0%, 89%);
     padding: 15px;
     font-size: 4rem;
